[workspace]
members = ["msb-fw-rs", "crates/*"]
resolver = "2"

[workspace.dependencies]
embassy-stm32 = { version = "0.1.0", features = ["defmt", "stm32f405rg", "unstable-pac", "memory-x", "time-driver-any", "exti", "chrono"] }
embassy-sync = { version = "0.6.0", features = ["defmt"] }
embassy-executor = { version = "0.5.0", features = ["task-arena-size-32768", "arch-cortex-m", "executor-thread", "executor-interrupt", "defmt"] }
embassy-time = { version = "0.3.1",  features = ["defmt", "defmt-timestamp-uptime", "tick-hz-32_768", "generic-queue"] }
embassy-embedded-hal = { version = "0.1.0", features = ["defmt"] }
embassy-futures = "0.1.1"

defmt = "0.3"
defmt-rtt = "0.4"

cortex-m = { version = "0.7.6", features = ["inline-asm", "critical-section-single-core"] }
cortex-m-rt = "0.7.0"
embedded-hal = { version = "1.0.0", features = ["defmt-03"] }
embedded-hal-bus = { version = "0.2", features = ["async", "defmt-03"] }
embedded-io = { version = "0.6.0", features = ["defmt-03"] }
embedded-io-async = { version = "0.6.1", features = ["defmt-03"] }
panic-probe = { version = "0.3", features = ["print-defmt"] }
futures-util = { version = "0.3.30", default-features = false }
heapless = { version = "0.8", default-features = false }
static_cell = "2.1.0"
chrono = { version = "^0.4", default-features = false}
embedded-hal-async = {version = "1.0.0", features = ["defmt-03"] }


[patch.crates-io]
embassy-stm32 = {git = "https://github.com/embassy-rs/embassy", rev = "4e5a646f8b1905de014462f5f0441952ec7e209b"}
embassy-sync = {git = "https://github.com/embassy-rs/embassy", rev = "4e5a646f8b1905de014462f5f0441952ec7e209b"}
embassy-executor = {git = "https://github.com/embassy-rs/embassy", rev = "4e5a646f8b1905de014462f5f0441952ec7e209b"}
embassy-time = {git = "https://github.com/embassy-rs/embassy", rev = "4e5a646f8b1905de014462f5f0441952ec7e209b"}
embassy-embedded-hal = {git = "https://github.com/embassy-rs/embassy", rev = "4e5a646f8b1905de014462f5f0441952ec7e209b"}
embassy-futures = {git = "https://github.com/embassy-rs/embassy", rev = "4e5a646f8b1905de014462f5f0441952ec7e209b"}



[profile.release]
debug = 2
opt-level = "s"
lto = "fat"