[workspace]
members = ["msb-fw-rs","crates/*"]
resolver = "2"

[workspace.dependencies]
embassy-stm32 = { version = "0.1.0", features = ["defmt", "stm32f405rg", "unstable-pac", "memory-x", "time", "time-driver-any", "exti"] }
embassy-sync = { version = "0.6.0", features = ["defmt"] }
embassy-executor = { version = "0.6.0", features = ["nightly", "arch-cortex-m", "executor-thread", "executor-interrupt", "defmt"] }
embassy-time = { version = "0.3.2",  features = ["defmt", "defmt-timestamp-uptime", "tick-hz-32_768", "generic-queue"] }
embassy-embedded-hal = { version = "0.2.0", features = ["defmt"] }
embassy-futures = { version = "0.1.1", features = ["defmt"] }

defmt = "0.3"
defmt-rtt = "0.4"

cortex-m = { version = "0.7.6", features = ["inline-asm", "critical-section-single-core"] }
cortex-m-rt = "0.7.0"
embedded-hal = { version = "1.0.0", features = ["defmt-03"] }
embedded-hal-bus = { version = "0.2", features = ["async", "defmt-03"] }
embedded-io = { version = "0.6.0", features = ["defmt-03"] }
embedded-io-async = { version = "0.6.1", features = ["defmt-03"] }
panic-probe = { version = "0.3", features = ["print-defmt", "defmt-error"] }
heapless = { version = "0.8", default-features = false }
static_cell = "2.1.0"
#chrono = { version = "^0.4", default-features = false}
embedded-hal-async = {version = "1.0.0", features = ["defmt-03"] }
bitfield = "^0.13.2"


[patch.crates-io]
embassy-stm32 = {git = "https://github.com/embassy-rs/embassy", rev = "1cf778904d597a5bc01a4b7862f965681636faf1"}
embassy-sync = {git = "https://github.com/embassy-rs/embassy", rev = "1cf778904d597a5bc01a4b7862f965681636faf1"}
embassy-executor = {git = "https://github.com/embassy-rs/embassy", rev = "1cf778904d597a5bc01a4b7862f965681636faf1"}
embassy-time = {git = "https://github.com/embassy-rs/embassy", rev = "1cf778904d597a5bc01a4b7862f965681636faf1"}
embassy-embedded-hal = {git = "https://github.com/embassy-rs/embassy", rev = "1cf778904d597a5bc01a4b7862f965681636faf1"}
embassy-futures = {git = "https://github.com/embassy-rs/embassy", rev = "1cf778904d597a5bc01a4b7862f965681636faf1"}



[profile.release]
opt-level = "s"
lto = "fat"
incremental = false
codegen-units = 1
# note: debug = true is okay - debuginfo isn't flashed to the device!
debug = true
