[package]
edition = "2021"
name = "cerberus"
version = "0.1.0"

[dependencies]
cortex-m.workspace = true
cortex-m-rt.workspace = true
defmt.workspace = true
defmt-rtt.workspace = true
embassy-embedded-hal.workspace = true
embassy-executor.workspace = true
embassy-stm32.workspace = true
embassy-sync.workspace = true
embassy-time.workspace = true
embassy-futures.workspace = true
heapless.workspace = true
panic-probe.workspace = true
static_cell.workspace = true
bitfield.workspace = true
pca9539-ner = { version = "0.1.0", path = "../crates/pca9539-ner" }